--- a/FindMe.Web.Bo/wwwroot/css/app/account/profile.css
+++ b/FindMe.Web.Bo/wwwroot/css/app/account/profile.css
@@ -1,5 +1,12 @@
 ﻿
 form[name="userProfileForm"] button.btn.btn-email {
-
     margin-bottom: 5px;
+}
+
+#vwUserProfile [uib-collapse] {
+    padding: 10px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    background-color: #efefef;
+    margin-bottom: 15px;
 }
