--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -217,6 +217,7 @@
             lbl_Type: ('@Html.GetLabel("lbl_Type")').encodeHtml(),
             lbl_HmPg: ('@Html.GetLabel("lbl_HmPg")').encodeHtml(),
             lbl_MenuAndSrchLstSide: ('@Html.GetLabel("lbl_MenuAndSrchLstSide")').encodeHtml(),
+            lbl_YtLnks: ('@Html.GetLabel("lbl_YtLnks")').encodeHtml(),
 
             lbl_Import: ('@Html.GetLabel("lbl_Import")').encodeHtml(),
             lbl_BrowseCsvAddrFile: ('@Html.GetLabel("lbl_BrowseCsvAddrFile")').encodeHtml(),
@@ -244,6 +245,8 @@
             lbl_Sunday: ('@Html.GetLabel("lbl_Sunday")').encodeHtml(),
             lbl_pHoliday: ('@Html.GetLabel("lbl_pHoliday")').encodeHtml(),
             lbl_Value: ('@Html.GetLabel("lbl_Value")').encodeHtml(),
+            lbl_Link: ('@Html.GetLabel("lbl_Link")').encodeHtml(),
+            lbl_Optnl: ('@Html.GetLabel("lbl_Optnl")').encodeHtml(),
 
             erMsg_InvldEmail: ('@Html.GetMessage("erMsg_InvldEmail")').encodeHtml(),
             erMsg_CnfrmPsswrd: ('@Html.GetMessage("erMsg_CnfrmPsswrd")').encodeHtml(),
@@ -290,7 +293,8 @@
             msg_SaveAddrs: ('@Html.GetMessage("msg_SaveAddrs")').encodeHtml(),
             msg_AddTag: ('@Html.GetMessage("msg_AddTag")').encodeHtml(),
             msg_RfrshTags: ('@Html.GetMessage("msg_RfrshTags")').encodeHtml(),
-            msg_SaveTags: ('@Html.GetMessage("msg_SaveTags")').encodeHtml()
+            msg_SaveTags: ('@Html.GetMessage("msg_SaveTags")').encodeHtml(),
+            msg_VwYtVideo: ('@Html.GetMessage("msg_VwYtVideo")').encodeHtml()
 
         };
         angular.module('app-mainmenu')
