--- a/FindMe.Web.Bo/wwwroot/Views/App/Addresses.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Addresses.html
@@ -32,13 +32,23 @@
                 <form class="editor-frm">
 
                     <div class="row">
-                        <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                        <div class="form-group col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <h4 class="control-label inline-element">{{vm.appProps.lbl_Actv}}</h4>
                             <span class="check-box">
-                                <input type="checkbox" value="None" id="addrModalActive" name="addrModalActive" ng-model="vm.address.active" />
+                                <input type="checkbox" value="None" id="addrModalActive" name="addrModalActive" ng-model="vm.address.active" ng-change="vm.checkAddressRecordState(vm.address)"/>
                                 <label class="lbl-chkb" for="addrModalActive"></label>
                             </span>
                         </div>
+
+                        <div class="form-group col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <h4 class="control-label inline-element">{{vm.appProps.lbl_FbFans}}</h4>
+                            <span class="check-box">
+                                <input type="checkbox" value="None" id="addrModalFbFan" name="addrModalFbFan" ng-model="vm.address.flgRecByFbFans" ng-change="vm.checkAddressRecordState(vm.address)"/>
+                                <label class="lbl-chkb" for="addrModalFbFan"></label>
+                            </span>
+                        </div>
+
                     </div>
 
                     <br />
@@ -47,11 +57,11 @@
                         <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <label class="control-label"><b>{{vm.appProps.lbl_Name}}</b></label>
                             <input type="text" class="form-control no-animate"
-                                   placeholder="{{vm.appProps.lbl_Name}}" ng-blur="vm.slugify()" ng-model="vm.address.name" />
+                                   placeholder="{{vm.appProps.lbl_Name}}" ng-blur="vm.slugify()" ng-model="vm.address.name" ng-change="vm.checkAddressRecordState(vm.address)"/>
                         </div>
                         <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <label class="control-label"><b>{{vm.appProps.lbl_Slug}}</b></label>
-                            <input placeholder="{{vm.appProps.lbl_Slug}}" type="text" class="form-control no-animate" ng-model="vm.address.slug" />
+                            <input placeholder="{{vm.appProps.lbl_Slug}}" type="text" class="form-control no-animate" ng-model="vm.address.slug" ng-change="vm.checkAddressRecordState(vm.address)"/>
                         </div>
                     </div>
 
@@ -62,6 +72,7 @@
                             <label class="control-label"><b>{{vm.appProps.lbl_Clnt}}</b></label>
 
                             <select class="form-control"
+                                    ng-change="vm.checkAddressRecordState(vm.address)"
                                     ng-model="vm.address.client"
                                     ng-options="client.name for client in vm.clients | orderBy:'name'"></select>
                         </div>
@@ -69,6 +80,7 @@
                             <label class="control-label"><b>{{vm.appProps.lbl_City}}</b></label>
 
                             <select class="form-control"
+                                    ng-change="vm.checkAddressRecordState(vm.address)"
                                     ng-model="vm.address.cityDetail"
                                     ng-options="cityDetail.name for cityDetail in vm.cityDetails | orderBy:'name'"></select>
                         </div>
@@ -79,6 +91,7 @@
                             <label class="control-label"><b>{{vm.appProps.lbl_Catg}}</b></label>
 
                             <select class="form-control"
+                                    ng-change="vm.checkAddressRecordState(vm.address)"
                                     ng-model="vm.address.parentCategory"
                                     ng-options="pcategory.name for pcategory in vm.parentCategorys"></select>
                         </div>
@@ -86,6 +99,7 @@
                             <label class="control-label"><b>{{vm.appProps.lbl_SubCatg}}</b></label>
 
                             <select class="form-control"
+                                    ng-change="vm.checkAddressRecordState(vm.address)"
                                     ng-model="vm.address.category"
                                     ng-options="category.name for category in vm.address.parentCategory.children"></select>
                         </div>
@@ -96,11 +110,11 @@
                     <div class="row">
                         <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <label class="control-label"><b>{{vm.appProps.lbl_Lat}}</b></label>
-                            <input placeholder="{{vm.appProps.lbl_Lat}}" type="number" class="form-control three-quarter no-animate" ng-model="vm.address.latitude">
+                            <input placeholder="{{vm.appProps.lbl_Lat}}" type="number" class="form-control three-quarter no-animate" ng-model="vm.address.latitude" ng-change="vm.checkAddressRecordState(vm.address)">
                         </div>
                         <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <label class="control-label"><b>{{vm.appProps.lbl_Lon}}</b></label>
-                            <input placeholder="{{vm.appProps.lbl_Lon}}" type="number" class="form-control no-animate" ng-model="vm.address.longitude">
+                            <input placeholder="{{vm.appProps.lbl_Lon}}" type="number" class="form-control no-animate" ng-model="vm.address.longitude" ng-change="vm.checkAddressRecordState(vm.address)">
                         </div>
                     </div>
 
@@ -110,11 +124,13 @@
                         <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <label class="control-label"><b>{{vm.appProps.lbl_Desc}} EN</b></label>
                             <textarea class="form-control three-quarter no-animate no-max-width" rows="4"
+                                      ng-change="vm.checkAddressRecordState(vm.address)"
                                       placeholder="{{vm.appProps.lbl_Desc}} EN" ng-model="vm.address.desc_en"></textarea>
                         </div>
                         <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <label class="control-label"><b>{{vm.appProps.lbl_Desc}} FR</b></label>
                             <textarea class="form-control no-animate no-max-width" rows="4"
+                                      ng-change="vm.checkAddressRecordState(vm.address)"
                                       placeholder="{{vm.appProps.lbl_Desc}} FR" ng-model="vm.address.desc_fr"></textarea>
                         </div>
                     </div>
